[package]
name = "gridist"
version = "0.1.0"
authors = ["León Illanes <lillanes@cs.toronto.edu>"]

[dependencies]
bencher = "0.1"
docopt = "0.8"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"

[profile.release]
debug = true

[[bench]]
name = "mini"
harness = false

[[bench]]
name = "enigma"
harness = false